
Sep 19
- Target: add impl version; use Ruby MRI version instead of RubySpec version (brixen)
- show Targets and Results publicly
- list latest results on the front page
- can add/edit Results
= add Result controller
= add Result model
- can add/edit Targets
= add Target controller
= add Target model

Sep 18
= add jump_off baseline project
= add jump_off vendor/plugins
= add jump_off vendor/gems
= add Rails 2.1.1 to vendor/rails
= start project